scripts/nullaway/wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8.txt
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:96: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:410: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                b.append(toString(v, (tagName == null) ? "array" : tagName));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:211: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:247: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:313: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8551e9ebc1_mishika05_Salesforce_DataGen_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:316: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
